EC2-Instance/main.tf
# create default vpc if one does not exit
resource "aws_default_vpc" "default-vpc" {

  tags = var.common_tags
}


# use data source to get all avalablility zones in region
data "aws_availability_zones" "available_zones" {}


# create default subnet if one does not exit
resource "aws_default_subnet" "default_az1" {
  availability_zone = data.aws_availability_zones.available_zones.names[0]

  tags = var.common_tags
}


# create security group for the ec2 instance
resource "aws_security_group" "ec2_security_group" {
  name        = "ec2 security group"
  description = "allow access on ports 80 and 22"
  vpc_id      = aws_default_vpc.default-vpc.id

  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "https access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-security-group"
  }
}


# use data source to get a registered amazon linux 2 ami
data "aws_ami" "amazon_linux_2" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "owner-alias"
    values = ["amazon"]
  }

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm*"]
  }
}


# launch the ec2 instance and install website
resource "aws_instance" "Env-dev" {
  ami               = data.aws_ami.amazon_linux_2.id
  instance_type     = var.instance-type
  key_name          = var.key-name
  availability_zone = var.az
  subnet_id         = aws_default_subnet.default_az1.id
  security_groups   = [aws_security_group.ec2_security_group.id]
  user_data         = file("postgres.sh")

  tags = {
    Name = "dev"
    Env  = "dev-env"
  }
}


# print the ec2's public ipv4 address
output "public_ipv4_address" {
  value = aws_instance.Env-dev.public_ip
}
